terraform/infra-network/vpc.tf
# 1. Base Virtual Private Cloud
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "${var.project_name}-vpc"
  }
}

# FIX CKV2_AWS_12: Adopt and completely isolate the default security group footprint
resource "aws_default_security_group" "default" {
  vpc_id = aws_vpc.main.id
  # Leaving ingress and egress empty acts as a definitive drop-all firewall block
}

# 2. Internet Gateway for Public Ingress/Egress
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "${var.project_name}-igw"
  }
}

# 3. Static Public IP Address allocation for the NAT Gateway
resource "aws_eip" "nat" {
  domain     = "vpc"
  depends_on = [aws_internet_gateway.igw]

  tags = {
    Name = "${var.project_name}-nat-eip"
  }
}

# 4. Shared NAT Gateway placed inside Public Subnet A to manage cost-efficient outbound software patching
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id # Binds natively to the first public subnet
  depends_on    = [aws_internet_gateway.igw]

  tags = {
    Name = "${var.project_name}-nat-gateway"
  }
}
